013_02082026_workload_replicaset_deployment_service_ingress-AGC-HostBase-yml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressforashuapp
  namespace: dev-ns
  labels:
    app: jio


spec:
  ingressClassName: azure-application-gateway

  rules:

  - host: nginx.ashutosh.sbs   # path based routing and loadbalancing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: nginx-ui-service
            port: 
              number: 8001

  - host: ashuapp.ashutosh.sbs
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-ui-service
            port: 
              number: 9001
